--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -1,10 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
+    <RelativeLayout
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toTopOf="parent">
 
+        <ImageView
+                android:id="@+id/backButton"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:padding="12dp"
+                android:src="@drawable/ic_arrow_back_black_24dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:contentDescription="@string/button_back"/>
+
+        <com.arindam.abode.utils.widgets.CustomFontTextView
+                android:id="@+id/header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="@string/note_new"
+                android:textSize="20sp"
+                app:custom_font="@string/roboto_regular"/>
+
+    </RelativeLayout>
+
+    <EditText
+            android:id="@+id/noteText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:background="@android:color/transparent"
+            android:hint="@string/note_hint"
+            android:inputType="text"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            tools:ignore="Autofill"/>
+
+    <RelativeLayout
+            android:id="@+id/saveButton"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:background="@drawable/button_background"
+            android:layout_margin="15dp"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+        <ImageView
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_check_white_24dp"
+                android:contentDescription="@string/button_save"/>
+
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
