--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#263379</color>
     <color name="colorAccent">#3F51B5</color>
+
+    <color name="color_button">#4CAF50</color>
 </resources>
