--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/color_button"/>
+    <solid android:color="@color/green"/>
     <stroke
             android:width="1dp"
-            android:color="@color/color_button"/>
+            android:color="@color/green"/>
     <corners android:radius="4dp"/>
 </shape>
