--- a/app/src/main/res/layout-v28/layout_home_item_view.xml
+++ b/app/src/main/res/layout-v28/layout_home_item_view.xml
@@ -12,4 +12,52 @@
         app:strokeWidth="1dp"
         app:strokeColor="#C7C7C7">
 
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp">
+
+        <RelativeLayout
+                android:id="@+id/itemHeader"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp">
+
+            <com.arindam.abode.utils.widgets.CustomFontTextView
+                    android:id="@+id/itemTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:textSize="14sp"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textStyle="bold"
+                    app:custom_font="@string/roboto_regular"/>
+
+            <com.arindam.abode.utils.widgets.CustomFontTextView
+                    android:id="@+id/itemDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:textSize="12sp"
+                    app:custom_font="@string/roboto_regular"/>
+
+        </RelativeLayout>
+
+        <com.arindam.abode.utils.widgets.CustomFontTextView
+                android:id="@+id/itemNote"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/itemHeader"
+                android:maxLines="3"
+                android:ellipsize="end"
+                android:lineSpacingExtra="4dp"
+                android:textSize="13sp"
+                android:textColor="@color/black"
+                app:custom_font="@string/roboto_regular"/>
+
+    </RelativeLayout>
+
 </androidx.cardview.widget.CardView>
