--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -16,10 +16,9 @@
 
         <ImageView
                 android:id="@+id/backButton"
-                android:layout_width="23dp"
-                android:layout_height="23dp"
-                android:layout_margin="10dp"
-                android:layout_centerVertical="true"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:padding="12dp"
                 android:src="@drawable/ic_arrow_back_black_24dp"
                 android:background="?android:attr/selectableItemBackground"
                 android:contentDescription="@string/button_back"/>
@@ -43,7 +42,8 @@
             android:layout_margin="20dp"
             android:background="@android:color/transparent"
             android:hint="@string/note_hint"
-            android:inputType="text"
+            android:maxLines="15"
+            android:inputType="textMultiLine"
             app:layout_constraintTop_toBottomOf="@+id/toolbar"
             tools:ignore="Autofill"/>
 
