--- a/app/src/main/res/layout/layout_home_item_view.xml
+++ b/app/src/main/res/layout/layout_home_item_view.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="15dp"
-        app:strokeWidth="1dp"
-        app:strokeColor="#C7C7C7">
+        android:layout_height="130dp"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="6dp"
+        app:cardUseCompatPadding="true">
 
     <RelativeLayout
             android:layout_width="match_parent"
@@ -17,7 +15,8 @@
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:paddingTop="15dp"
-            android:paddingBottom="15dp">
+            android:paddingBottom="15dp"
+            android:background="@drawable/card_stroke_background">
 
         <RelativeLayout
                 android:id="@+id/itemHeader"
