--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -24,7 +24,7 @@
                 android:contentDescription="@string/button_back"/>
 
         <com.arindam.abode.utils.widgets.CustomFontTextView
-                android:id="@+id/header"
+                android:id="@+id/headerText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
